[package]
name = "av1an_node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
av1an-core = { version = "*", git = "https://github.com/master-of-zen/Av1an", package = "av1an-core" }
log = "0.4.14"
actix-web = "4"
local-ip-address = "0.4.5"
tokio = { version = "1.20.0", features = ["full"] }
serde_json = "1.0.64"
serde = { version = "1.0.126", features = ["serde_derive"] }


[patch.crates-io]
av-scenechange = { git = "https://github.com/rust-av/av-scenechange", rev = "4804462f2b6ae6209609cd95b5d9739264bf614f" }
